--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         font-family: "Sono", sans-serif;
       }
 
+      h1
+      {
+        text-align: center;
+      }
+
       .pricing-container
       {
         display: flex;
@@ -125,9 +130,9 @@
         <button class="plan-button">Sign Up</button>
       </div>
 
-
-       <h1> Made by Martin D'La Fuente </h1>
     </div>
+
+      <h1> Made by Martin D'La Fuente </h1>
   </body>
 
 </html>
